[package]
name = "lumen"
description = "Lumen is an astronomically fast ShareX uploader written in Rust using the Actix Web framework."
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["rustls"] }
aes-gcm-siv = "0.11.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }
base64 = "0.21.4"
sha3 = "0.10.8"
argon2 = "0.5.2"
dotenvy = "0.15.7"
anyhow = "1.0.75"
